7181986: NMT ON: Assertion failure when running jdi ExpiredRequestDeletionTest

Changed _query_lock to heap object from static object. Also fixed _query_lock and snapshot lock ranks, so they can participate deadlock detection.

Reviewed-by: coleenp, dholmes, kvn